PHP                                                                        NEWS
|||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||
?? ??? 2017, PHP 7.1.13

- Core:
  . Fixed bug #75384 (PHP seems incompatible with OneDrive files on demand).
    (Anatol)

- CLI Server:
  . Fixed bug #60471 (Random "Invalid request (unexpected EOF)" using a router
    script). (SammyK)

- Standard:
  . Fixed bug #75511 (fread not free unused buffer). (Laruence)
  . Fixed bug #75514 (mt_rand returns value outside [$min,$max]+ on 32-bit)
    (Remi)

23 Nov 2017, PHP 7.1.12

- Core:
  . Fixed bug #75420 (Crash when modifing property name in __isset for
    BP_VAR_IS). (Laruence)
  . Fixed bug #75368 (mmap/munmap trashing on unlucky allocations). (Nikita,
    Dmitry)

- CLI:
  . Fixed bug #75287 (Builtin webserver crash after chdir in a shutdown
    function). (Laruence)

- Enchant:
  . Fixed bug #53070 (enchant_broker_get_path crashes if no path is set). (jelle
    van der Waa, cmb)
  . Fixed bug #75365 (Enchant still reports version 1.1.0). (cmb)

- Exif:
  . Fixed bug #75301 (Exif extension has built in revision version). (Peter
    Kokot)

- GD:
  . Fixed bug #65148 (imagerotate may alter image dimensions). (cmb)
  . Fixed bug #75437 (Wrong reflection on imagewebp). (Fabien Villepinte)

- intl:
  . Fixed bug #75317 (UConverter::setDestinationEncoding changes source instead 
    of destination). (andrewnester)

- interbase:
  . Fixed bug #75453 (Incorrect reflection for ibase_[p]connect). (villfa)

- Mysqli:
  . Fixed bug #75434 (Wrong reflection for mysqli_fetch_all function). (Fabien
    Villepinte)

- OCI8:
  . Fixed valgrind issue. (Tianfang Yang)

- OpenSSL:
  . Fixed bug #75363 (openssl_x509_parse leaks memory). (Bob, Jakub Zelenka)
  . Fixed bug #75307 (Wrong reflection for openssl_open function). (villfa)

- Opcache:
  . Fixed bug #75373 (Warning Internal error: wrong size calculation). (Laruence, Dmitry)

- PGSQL: